# kinect-studio

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  Bench.cpp  Bench.h  CKobuki.cpp  CKobuki.h  Frame.h  FrameGenerator.cpp  FrameGenerator.h  FrameMatcher.cpp  FrameMatcher.h  FrameProcessor.cpp  FrameProcessor.h  Logger.h  MapModel.cpp  MapModel.h  app.cpp  fastBilateral.hpp  globals.cpp  globals.h  graph.h  kinectdatasource.cpp  kinectdatasource.h  mainwindow.h  mainwindow.ui  myfreenectdevice.cpp  myfreenectdevice.h  offlinedatasource.cpp  offlinedatasource.h  parallel_threshold.h  rgbddatasource.h
trash/: mainwindow.cpp
